Responsive Mobile Tab + quick fix Initiale integration + fix height panel toggle extraSpacing Issue

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,6 @@
 .card{
   --radius:10px;
-  --sizes:350px;
+  --sizes:325px;
   width:var(--sizes);
   height: var(--sizes);
   display: flex; 
