--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -10,6 +10,7 @@
   color:var(--black-color);
   font-size:1.25rem;
   font-weight:var(--weight-medium);
+  text-transform: uppercase;
   position: relative;
 }
 
