--- a/src/components/Us/us.css
+++ b/src/components/Us/us.css
@@ -1,5 +1,10 @@
 
 .us {
-  margin-block:1rem;
-  padding:1rem;
+  --gap:2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: var(--gap);
+  margin-block:calc(1.5 * var(--gap));
+  /* padding:1rem; */
 }
